# line-segment-gen

./: .gitignore  README.md  main.py  pyproject.toml
